<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="app_name">Gogreen</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \having a lovely day!</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="Username">Username</string>/>
    <string name="app_Reuse" translatable="false">Reuse</string>
    <string name="app_Recently_reused" translatable="false">Select recently reused item</string>
    <string name="app_Add_an_item" translatable="false">Reuse an item: </string>
    <string name="app_Points" translatable="false">Points</string>
    <string name="app_Add_new_item" translatable="false">Add a new reusable item: </string>
    <string name="app_Start_typing" translatable="false">Start typing...</string>
    <string name="app_Plus" translatable="false">Plus symbol</string>
    <string name="app_Minus" translatable="false">Minus symbol</string>
    <string name="title_activity_points" translatable="false">Points</string>
    <string name="app_todays_Points" translatable="false">Edit today\'s reused items: </string>
    <string name="app_todays_items" translatable="false">Reused items</string>
    <string name="your_place">Your Place</string>
    <string name="username">UserName:</string>
    <string-array name="numbers">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
    </string-array>
    <string name="google_direction_api">AIzaSyDdn_ZU-iBnQ8QY1gexsp8kqE6KaJ48Q3M</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_second">Home Second</string>
    <string name="action_settings">Settings</string>
</resources>